# aerial-and-maritime-drones

./: CMakeLists.txt  README.md  package.xml
aerial_control_lab/: CMakeLists.txt  package.xml
aerial_control_lab/gazebo/models/crazy2fly/: model.config  model.sdf
aerial_control_lab/gazebo/worlds/: single_uav.sdf  single_uav_fixed.sdf
aerial_control_lab/include/: matplotlibcpp.h
aerial_control_lab/include/lab_auve/: uavsim.h
aerial_control_lab/launch/: uav_simulation.launch.py  uav_simulation_fixed.launch.py
aerial_control_lab/src/: uavcontrol.cpp  uavsim.cpp
aerial_control_lab/subject/latex_src/: AUVE_Lab_UAV.aux  AUVE_Lab_UAV.out  AUVE_Lab_UAV.tex
aerial_control_lab/subject/latex_src/svg-inkscape/: QuadRotorPlus_svg-tex.pdf_tex
aerial_swarm_lab/: drone.py  flock.py  utils.py
launch/: layout.rviz  sim_launch.py
params/: waypoints.yaml
src/: waypoints.h
subject/: auv_lab.tex
underwater_lab/launch/: bluerov2_launch.py  control_launch.py  ekf_launch.py  pose_setpoint.yaml  spawn_all_launch.py
underwater_lab/params/: cascaded_pid.yaml  ekf.yaml  noise.yaml
underwater_lab/src/: gz2ekf.cpp  waypoints.cpp
underwater_lab/urdf/terrain/: terrain.xacro
urdf/: bluerov2.urdf  world.sdf
urdf/terrain/: MangaliaTerrain.osg
