<?xml version="1.0"?>
<package format="3">
  <name>ecn_auv_lab</name>
  <version>1.0.0</version>
  <description>
    Underwater robotics lab @ Centrale Nantes
  </description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>yaml-cpp</depend>
  <depend>rclcpp</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

